fixed color of money signs for better contrast

--- a/Style.css
+++ b/Style.css
@@ -30,7 +30,7 @@ h2 {
 
 span{
     font: bold;
-    color: green;
+    color:rgb(50, 226, 50);
     font-size: xx-large;
 }
 
